package org.example.domain;

/**
 * Перечисление возможных состояний симуляции
 */
public enum SimulationState {
    NOT_STARTED,
    STARTED
}
